--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -13,7 +13,7 @@
     </div>
 
     <div id = "quote" class = 'top-right'>
-      <button type="button" class="btn btn-lg btn--light" data-toggle="modal" data-target=".bd-example-modal-lg">Get Link to Save or Share<span class="fa fa-chevron-circle-right"></span></button>
+      <button onclick="shareLink()" type="button" class="btn btn-lg btn--light" data-toggle="modal" data-target=".bd-example-modal-lg">Get Link to Save or Share<span class="fa fa-chevron-circle-right"></span></button>
 
 <!-- Modal -->
       <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -31,7 +31,7 @@
             </div>
             <div class="modal-body">
               <br />
-              <input class="form-text-area" type="text" value="" id="shareLink">
+              <input class="form-text-area" type="text" value="Copy text!" id="shareLink">
             </div>
             <div class="modal-footer">
               <button class="btn btn-info" onclick="copyText()">Copy text</button>
@@ -64,6 +64,10 @@
                                 <div class="media-body">
                                     <p><%= results[i].question %> </p>
                                     <p><%= results[i].answer %> </p>
+                                    <p id=value style="display: none"><%= results[i].value %></p>
+
+
+
                                   <!--  <p>Answer: <span id="<% i %>"></span></p> -->
                                 </div>
                             </div>
