--- a/views/pages/question.ejs
+++ b/views/pages/question.ejs
@@ -3,28 +3,28 @@
 <head>
   <% include ../partials/head %>
 </head>
-<body onload="displayQuote()">
+
+<body onload="displayQuote(), PopulateBreakdownArray()">
   <% include ../partials/navbar %>
   <div class="container text-center huge-top-buffer bottom-buffer">
-    <h1 class = "wow fadeInDown anim" data-wow-delay="0.3s"><%= question.title %></h1>
-    <p class ="wow fadeInDown anim" data-wow-delay="0.3s"><%= question.description %></p>
-
+    <h1><%= question.title %></h1>
+    <p><%= question.description %></p>
     <div class="row">
       <%   for(var i=0; i< question.answers.length; i++) { %>
         <div class="mx-auto col-lg-4 col-md-4 col-xs-4 thumb img-grow">
           <% if (lastQuestion == true){ %>
-              <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="gotoResults" id="gotoResults" href="http://localhost:7000/results">
-            <%   } %>
-          <%  if (lastQuestion == false) { %>
-          <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="thumbnail" id="forward" href="<%= question.href %>">
-            <% } %>
-            <img id="answerImage" class="img-responsive top-buffer img-circle" src="<%= question.answers[i].imageURL %>"  alt="" height="150" width="200">
-          </a>
-          <div class="bottom-center"><%= question.answers[i].title %></div>
-        </div>
-        <%   } %>
-      </div>
-    </div>
+            <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="gotoResults" id="gotoResults" href="http://localhost:7000/results">
+              <%   } %>
+              <%  if (lastQuestion == false) { %>
+                <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="thumbnail" id="forward" href="<%= question.href %>">
+                  <% } %>
+                  <img id="answerImage" class="img-responsive top-buffer img-circle" src="<%= question.answers[i].imageURL %>"  alt="" height="150" width="200">
+                </a>
+                <div class="bottom-center"><%= question.answers[i].title %></div>
+         </div>
+              <%   } %>
+     </div>
+  </div>
     <div class = 'top-right'>
       <h4>
         Quote: <span class="estimate">€</span><span id = "quote" class="estimate">0</span>
@@ -35,12 +35,11 @@
         <h4>< - Previous Question</h4>
       </a>
     </div>
-
     <div class = 'bottom-right'>
       <h4>
         Page: <%= question.pageNo %> out of <%= questions.length %>
       </h4>
     </div>
-      <% include ../partials/footer %>
+    <% include ../partials/footer %>
   </body>
-  </html>
+</html>
