--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,19 +12,13 @@
       <p>Have you ever wondered how much it would cost to make a website? This handy app cost calculator will help you: Find out how much your website will cost in under a minute!</p>
       <button id ="startBtn" onclick="startQuiz()" type="button" class="btn btn-lg btn--light btnFillup anglebg">Get Started</button>
     </div>
-
     <div class = 'top-right'>
             <div class="social-buttons hidden-xs">
-  					<!-- Facebook Share Button -->
-  					<div class="fb-share-button" data-href="http://howmuchdoesawebsiteco.st" data-layout="button"></div>
   					<!-- Twitter Tweet Button -->
   					<a href="https://twitter.com/share" class="twitter-share-button" data-text="How much does it cost to make a website? Find out in less than a minute. –" data-count="none"></a>
   					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   				</div>
     </div>
-
-
-
   </div>
     <% include ../partials/footer %>
 </body>
@@ -44,14 +38,51 @@ a list of clickable answers, a summarized total of the quote so far, current pag
 if (question.answers.length == 2){
 document.getElementById("answerImage").classList.add("offset-3");
 
+have an array of breakddown string properys and have it never be more than questions.length
+so that users will be able to go back a page and the array will auto fix to the apprioriote
+value, question No,
+
+
 ToDo List
 __________
 
 []    encrypted url
-[]    loop generating list on results pages
-[]    make modal bigger
+[X]    loop generating list on results pages
 []    clean code
 [X]    mx-auto on answers
+[]    fix issue were going back fucks up the Quiz
+[]    Fix email
+[]    Footer/Nav?
+[]    Abilty to Edit breakdown answers on results pages
+[]    Implement range values like cormac was talking about
+[]    Previous question should append breakdownstring and quote
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+getting a value from the question
+I don't know
+
+could have a second array
+in the scenario of i dont know you have unforseen quote. (highest range)
+take all the unforseens at the end and out them inot their own range
+
+
+
+
+
 
 
 
