--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,18 +6,18 @@
 </head>
 <body>
   <div class="text-center huge-top-buffer">
+    <div class = 'top-right'>
+      <div class="social-buttons hidden-xs">
+					<!-- Twitter Tweet Button -->
+					<a href="https://twitter.com/share" class="twitter-share-button" data-text="How much does it cost to make a website? Find out in less than a minute. –" data-count="none"></a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  		</div>
+    </div>
     <div class ="container-fluid">
-      <img class="fadeInUp" src="../images/icons/code.svg" alt="How much does a website cost?">
+      <img class="fadeInUp" src="images/icons/code.svg" alt="How much does a website cost?">
       <h1>How Much Does a Website Cost</h1>
       <p>Have you ever wondered how much it would cost to make a website? This handy app cost calculator will help you: Find out how much your website will cost in under a minute!</p>
       <button id ="startBtn" onclick="startQuiz()" type="button" class="btn btn-lg btn--light btnFillup anglebg">Get Started</button>
-    </div>
-    <div class = 'top-right'>
-            <div class="social-buttons hidden-xs">
-  					<!-- Twitter Tweet Button -->
-  					<a href="https://twitter.com/share" class="twitter-share-button" data-text="How much does it cost to make a website? Find out in less than a minute. –" data-count="none"></a>
-  					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  				</div>
     </div>
   </div>
     <% include ../partials/footer %>
@@ -48,45 +48,11 @@ __________
 
 []    encrypted url
 [X]    loop generating list on results pages
-[]    clean code
+[X]    clean code
 [X]    mx-auto on answers
-[]    fix issue were going back fucks up the Quiz
-[]    Fix email
-[]    Footer/Nav?
-[]    Abilty to Edit breakdown answers on results pages
+[X]    fix issue were going back fucks up the Quiz
+[X]    Abilty to Edit breakdown answers on results pages
 []    Implement range values like cormac was talking about
-[]    Previous question should append breakdownstring and quote
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-getting a value from the question
-I don't know
-
-could have a second array
-in the scenario of i dont know you have unforseen quote. (highest range)
-take all the unforseens at the end and out them inot their own range
-
-
-
-
-
-
-
-
-
-}
 
 -->
