fixed some bugs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,6 +43,11 @@ so that users will be able to go back a page and the array will auto fix to the 
 value, question No,
 
 
+
+use if contains edit to get the number from url
+
+if local storage is null then dont show changes
+
 ToDo List
 __________
 
