--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -6,7 +6,7 @@
   </head>
   <body onload="generateEstimate()">
     <div class = 'top-left'>
-      <a onclick="startQuiz()" class="giveCursor">
+      <a onclick="startQuiz()" class="change giveCursor">
         <h4>< - Start Again</h4>
       </a>
     </div>
