--- a/views/pages/question.ejs
+++ b/views/pages/question.ejs
@@ -4,10 +4,10 @@
   <% include ../partials/head %>
 </head>
 
-<body onload="displayQuote(), PopulateBreakdownArray()">
+<body onload="DisplayQuote(), PopulateBreakdownArray()">
   <% include ../partials/navbar %>
     <div class = 'top-left'>
-      <a onclick="goBack()" class="giveCursor">
+      <a onclick="GoBack()" class="giveCursor">
         <h4>< - Previous Question</h4>
       </a>
     </div>
@@ -23,10 +23,10 @@
       <%   for(var i=0; i< question.answers.length; i++) { %>
         <div class="mx-auto col-lg-4 col-md-4 col-xs-4 thumb img-grow">
           <% if (lastQuestion == true){ %>
-            <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="gotoResults" id="gotoResults" href="http://localhost:7000/results">
+            <a onclick="IncreaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="gotoResults" id="gotoResults" href="http://localhost:7000/results">
               <%   } %>
               <%  if (lastQuestion == false) { %>
-                <a onclick="increaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="forward" id="forward" href="<%= question.href %>">
+                <a onclick="IncreaseQuote(<%= question.answers[i].value %>,<%= question.pageNo %>, <%= question.answers[i].answerNo %>);" class="forward" id="forward" href="<%= question.href %>">
                   <% } %>
                   <img id="answerImage" class="img-responsive top-buffer img-circle" src="<%= question.answers[i].imageURL %>"  alt="" height="150" width="200">
                 </a>
